fixed text align on a tags in mobile

--- a/main.css
+++ b/main.css
@@ -197,6 +197,7 @@ a {
 	border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
 	text-decoration: none;
 	color: white;
+	text-align: center;
 }
 
 #header nav ul li {
